--- a/index.html
+++ b/index.html
@@ -15,50 +15,146 @@
     }
     h1 { color: #005a9c; }
     section {
-      background: #fff; padding: 20px;
-      border-radius: 10px; margin-bottom: 20px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
     .keyword { font-weight: bold; font-size: 18px; color: #0a558c; }
-    .problem { color: #c0392b; }
-    .solution { color: #27ae60; }
+    .problem { color: #c0392b; margin-top: 10px; }
+    .solution { color: #27ae60; margin-top: 10px; }
   </style>
 </head>
 <body>
   <h1>📚 Glossary ความมั่นคงสารสนเทศ</h1>
-  <div id="glossary">กำลังโหลดข้อมูล...</div>
 
-  <script>
-    const SHEET_URL = "https://script.google.com/macros/s/AKfycbwlwbpy0p6Zc_R9t3jnaZnsmlLjE1V49qlviWm6Aqgh9Lz1T7OOdrm9GG0WfejQ75KWTw/exec";
+  <section>
+    <div class="keyword">🔐 Confidentiality (ความลับ)</div>
+    <p><strong>คืออะไร : </strong>จำกัดสิทธิ์การเข้าถึงข้อมูลเฉพาะผู้ได้รับอนุญาต</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 แชร์ Google Drive โดยตั้งค่า “Anyone with the link can view” โดยไม่ตั้งสิทธิ์<br>
+      📌 พบว่าอดีตพนักงานยังสามารถเข้าระบบได้
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข :</strong><br>
+      ✅ เปลี่ยนสิทธิ์แชร์ให้เฉพาะอีเมลภายในองค์กร<br>
+      ✅ ลบบัญชีหรือรีเซ็ตรหัสผ่านผู้ใช้งานที่ลาออก<br>
+      ✅ ใช้ระบบที่รองรับการยืนยันตัวตน (SSO, 2FA)
+    </div>
+  </section>
 
-    fetch(SHEET_URL)
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById("glossary");
-        container.innerHTML = "";
-        data.forEach(item => {
-          const section = document.createElement("section");
-          section.innerHTML = `
-            <div class="keyword">${item.keyword}</div>
-            <p><strong>คืออะไร:</strong> ${item.description}</p>
-          
-            <div class="problem">
-              <strong>ถ้าเจอปัญหาแบบนี้ :</strong><br>
-              ${item.problem}
-            </div>
-            <br>
-            <div class="solution">
-              <strong>ควรแก้ไข :</strong><br>
-              ${item.solution}
-            </div>
-          `;
-          container.appendChild(section);
-        });
-      })
-      .catch(err => {
-        document.getElementById("glossary").innerHTML = "❌ ไม่สามารถโหลดข้อมูลได้";
-        console.error(err);
-      });
-  </script>
+  <section>
+    <div class="keyword">🧾 Integrity (ความถูกต้องของข้อมูล)</div>
+    <p><strong>คืออะไร : </strong>ข้อมูลต้องถูกต้อง ไม่ถูกเปลี่ยนแปลงโดยไม่ได้รับอนุญาต</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 ข้อมูลในไฟล์ Excel ถูกแก้ผิด หรือหายไปโดยไม่ทราบสาเหตุ<br>
+      📌 รายงานถูกแก้ชื่อ / ตัวเลขโดยไม่ได้แจ้ง
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ เปิดใช้ระบบบันทึกประวัติ (Version History, Audit Log)<br>
+      ✅ กำหนดสิทธิ์แก้ไขเป็นเฉพาะเจ้าของ<br>
+      ✅ สำรองไฟล์ก่อนส่งหรือแชร์ให้ผู้อื่น
+    </div>
+  </section>
+
+  <section>
+    <div class="keyword">🖥️ Availability (ความพร้อมใช้งาน)</div>
+    <p><strong>คืออะไร : </strong>ระบบ/ข้อมูลสามารถใช้งานได้ทันทีเมื่อจำเป็น</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 Server ล่มระหว่างประชุมออนไลน์<br>
+      📌 ไม่สามารถเข้าระบบขออนุมัติได้ในเวลางาน
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ แจ้ง IT เพื่อเช็กความเสถียรของระบบหรือโครงสร้างพื้นฐาน<br>
+      ✅ ควรมีแผนสำรอง (แอปสำรอง, Offline Template)<br>
+      ✅ หมั่นทดสอบระบบล่วงหน้า
+    </div>
+  </section>
+
+  <section>
+    <div class="keyword">🦠 Malware (มัลแวร์)</div>
+    <p><strong>คืออะไร : </strong>ไฟล์หรือซอฟต์แวร์อันตราย เช่น ไวรัส, โทรจัน, แรนซัมแวร์</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 คอมพิวเตอร์ทำงานช้า เปิดไฟล์ไม่ได้<br>
+      📌 มีหน้าจอแปลกๆ ขึ้นมา เช่นเรียกค่าไถ่
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ ตัดการเชื่อมต่ออินเทอร์เน็ตทันที<br>
+      ✅ แจ้ง IT เพื่อสแกนระบบ<br>
+      ✅ หลีกเลี่ยงการเปิดไฟล์แนบจากแหล่งที่ไม่รู้จัก
+    </div>
+  </section>
+
+  <section>
+    <div class="keyword">📧 Phishing (ฟิชชิง)</div>
+    <p><strong>คืออะไร : </strong>อีเมลหรือเว็บไซต์ปลอมหลอกให้กรอกข้อมูล</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 ได้อีเมลที่ดูเหมือนจาก HR/ธนาคาร แต่โดเมนผิด เช่น hr-support@fake.com<br>
+      📌 ลิงก์ในอีเมลพาไปหน้าล็อกอินที่ไม่ใช่ของจริง
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ ห้ามคลิกลิงก์หรือกรอกข้อมูล<br>
+      ✅ แจ้งผู้ดูแลระบบเพื่อตรวจสอบและแจ้งเตือนพนักงานคนอื่น<br>
+      ✅ ใช้ปุ่ม “Report phishing” บนอีเมล (Gmail/Outlook)
+    </div>
+  </section>
+
+  <section>
+    <div class="keyword">🔑 รหัสผ่านอ่อนแอ (Weak Password)</div>
+    <p><strong>คืออะไร : </strong>คืออะไร: รหัสผ่านที่เดาง่าย เช่น 123456 หรือ วันเกิด</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 พบว่าบัญชีตนเองหรือคนอื่นถูกเข้าใช้โดยไม่รู้ตัว<br>
+      📌 รหัสผ่านหลุดเพราะตั้งเหมือนกันหลายระบบ
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ เปลี่ยนรหัสผ่านทันที<br>
+      ✅ ตั้งรหัสผ่านที่คาดเดายาก (ยาว >12 ตัว)<br>
+      ✅ ใช้ Password Manager (Google, Bitwarden)
+    </div>
+  </section>
+
+  <section>
+    <div class="keyword">🛡️ 2FA (Two-Factor Authentication)</div>
+    <p><strong>คืออะไร : </strong>การยืนยันตัวตนแบบ 2 ขั้น เช่น รหัสผ่าน + OTP</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      📌 บัญชีถูกแฮก แม้จะตั้งรหัสผ่านดีแล้ว<br>
+      📌 ลืมเปิด 2FA ในระบบสำคัญ เช่น Email, HR
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      ✅ เข้าไปเปิดใช้งาน 2FA ทันทีในระบบที่รองรับ<br>
+      ✅ ใช้แอป Authenticator แทน OTP ผ่าน SMS (ปลอดภัยกว่า)<br>
+      ✅ บันทึกรหัส backup สำหรับการเข้าใช้งานหากมือถือหาย
+    </div>
+  </section>
+
+<!--   <section>
+    <div class="keyword">xxx</div>
+    <p><strong>คืออะไร : </strong>xxx</p>
+    <div class="problem">
+      <strong>ถ้าเจอปัญหาแบบนี้ : </strong><br>
+      xxx
+    </div>
+    <div class="solution">
+      <strong>ควรแก้ไข : </strong><br>
+      xxx
+    </div>
+  </section> -->
+
+  <!-- เพิ่มหัวข้ออื่น ๆ ได้ตามต้องการโดยคัดลอก <section> นี้ -->
+
 </body>
 </html>
