--- a/index.html
+++ b/index.html
@@ -6,52 +6,24 @@
   <title>Glossary - ความมั่นคงสารสนเทศ</title>
   <style>
     body {
-      font-family: 'Prompt', sans-serif;
-      background: linear-gradient(to bottom right, #eef2f7, #dbeafe);
-      color: #1f2937;
-      padding: 2rem;
-      margin: 0;
-    }
-    h1 {
-      text-align: center;
-      color: #1e40af;
-      font-weight: 600;
-      margin-bottom: 2rem;
-    }
-    .container {
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f4f8fb;
+      color: #222;
+      padding: 30px;
       max-width: 960px;
       margin: auto;
     }
+    h1 { color: #005a9c; }
     section {
-      background: #ffffff;
-      padding: 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-      margin-bottom: 1.5rem;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    .keyword {
-      font-size: 1.25rem;
-      font-weight: 600;
-      color: #0f172a;
-      margin-bottom: 0.5rem;
-    }
-    .problem {
-      color: #b91c1c;
-      margin-top: 1rem;
-    }
-    .solution {
-      color: #15803d;
-      margin-top: 1rem;
-    }
-    strong {
-      display: inline-block;
-      margin-bottom: 0.25rem;
-    }
-    @media (max-width: 600px) {
-      body {
-        padding: 1rem;
-      }
-    }
+    .keyword { font-weight: bold; font-size: 18px; color: #0a558c; }
+    .problem { color: #c0392b; margin-top: 10px; }
+    .solution { color: #27ae60; margin-top: 10px; }
   </style>
 </head>
 <body>
